# enclim

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: ensemble_config.yaml
enclim/: __init__.py  config.py  ensemble.py  exceptions.py  io.py  manifest.py  metrics.py  processor.py  run_ensemble.py  writer.py
tests/: conftest.py  test_config.py  test_manifest.py  test_metrics.py  test_pipeline.py  test_run_ensemble.py
